--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,7 +1,11 @@
 .footer {
-    background-color: #f2f2f2;
+    background-color: #fec6c676;
     padding: 20px;
     text-align: center;
+    bottom: 0;
+    margin-top: 100px;
+    border-radius: 4px;
+
   }
   
   .footer ul {
@@ -24,3 +28,4 @@
   .footer a:hover {
     border-bottom-color: #666;
   }
+
