--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,7 +1,9 @@
 .header {
-    background-color: #333;
+    background-color: #440934c1;
     color: #fff;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
+    border-radius: 4px;
+
   }
   
