--- a/src/components/tours/Tours.css
+++ b/src/components/tours/Tours.css
@@ -1,21 +1,30 @@
 .tours {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 20px;
+    margin: 20px auto;
+    max-width: 1200px;
+    text-align: center;
+
   }
   
   .tour {
-    margin: 20px;
-    text-align: center;
+    border-radius: 4px;
+    box-shadow: 0px 0px 10px rgb(141, 21, 21);
+    overflow: hidden;
   }
   
   .tour img {
-    width: 300px;
+    width: 100%;
     height: 200px;
     object-fit: cover;
-    margin-bottom: 10px;
   }
   
-  .tour h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
+  .tour h3 {
+    margin: 0;
+    padding: 20px;
+    font-size: 1.5rem;
+    text-align: center;
+    color: #ffffff;
   }
+  
